add: module structure